--- a/styls/portfolio.css
+++ b/styls/portfolio.css
@@ -164,6 +164,68 @@ main{
     font-size: 30px;
     margin-top: 100px;
     margin-bottom: 150px;
+}
 
+/* resume contant style */
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume .tittle{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume .sub-tittle{
+    color: #817f7f;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.resume .discription{
+    color:#757575;
+}
+.resume-ittme
+{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.button-primary{
+    color: aliceblue;
+    font-weight: 700;
+    font-size: 15px;
+    border: 0;
+    padding: 18px 25px;
+    border-radius: 5px;
+    background: rgb(205, 95, 36);
+}
+.resume-button{
+    text-align: center;
+    margin-bottom: 90px;
+}
+/* contact style */
 
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #eed3c1;
+    padding: 130px 200px;
+}
+.contact .section-tittle{
+text-align: left;
+}
+.contact input, textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+    background: #ffffff;
+}
+.section-tittle{
+    
+}
+.contact a{
+    text-decoration: none;
+    
 }
